tests/src/frontend/syntax/invalid/declaration.sk
public fun main(): String {
  "Fail"
}

